@@ -1,3 +1,9 @@
+2010-11-25  Arjan Gijsberts  <arjan@liralab.it>
+
+	* conf/FindAtlas.cmake: additional possibly include directory
+	and library locations for Atlas, warranted by changes in the 
+	Ubuntu packages.
+
 2010-11-24  Paul Fitzpatrick  <paulfitz@nominal.csail.mit.edu>
 
 	* src/libYARP_OS/src/Companion.cpp: unregister port names
